# ohmly

./: README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
docs/: index.md  mechanical-analysis.md  requirements.txt
docs/examples/: sag_tension_basic.md
scripts/: export_docs_requirements.sh
src/ohmly/: conductor.py  mech.py
tests/: test_catenary.py  test_conductor.py  test_mech_analysis.py  test_utils.py
